# LAview.win32-bundle

./: .gitmodules  CMakeLists.txt  build32.sh  build64.sh
cpack/: CMakeLists.txt
